--- a/01-Fundamentals-Part-1/starter/index.html
+++ b/01-Fundamentals-Part-1/starter/index.html
@@ -31,7 +31,7 @@
 
   <script src="script.js"></script>
   <script src="assignments.js"></script>
-  <script src="/01-Fundamentals-Part-1/cahllenge.js"></script>
+  <script src="cahllenge.js"></script>
 </body>
 
 </html>
