--- a/15-Mapty/starter/index.html
+++ b/15-Mapty/starter/index.html
@@ -25,7 +25,7 @@
     <img src="logo.png" alt="Logo" class="logo" />
 
     <ul class="workouts">
-      <form class="form hidden">
+      <form class="form hidden form--transition">
         <div class="form__row">
           <label class="form__label">Type</label>
           <select class="form__input form__input--type">
@@ -94,7 +94,7 @@
             <span class="workout__unit">km/h</span>
           </div>
           <div class="workout__details">
-            <span class="workout__icon">⛰</span>
+            <span class="workout__icon">🐱‍👤</span>
             <span class="workout__value">223</span>
             <span class="workout__unit">m</span>
           </div>
